--- a/static/assets/other/gridstack/gridstack-extra.css
+++ b/static/assets/other/gridstack/gridstack-extra.css
@@ -2011,3 +2011,13 @@
 }
 
 */
+/************重置样式*****************/
+.grid-stack-item > .grid-stack-item-content{
+  top: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+}
+
+
+
