--- a/static/assets/other/gridstack/update_class.css
+++ b/static/assets/other/gridstack/update_class.css
@@ -31,3 +31,6 @@
     z-index: 10;
     background-color: rgba(0,0,0,0);
 }
+.jl_vip_zt_warp .mask-layer-active{
+    border: 1px dashed #6777EF;
+}
