设置-数据渲染

--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -30,6 +30,8 @@
         width: 100%;
         height: 100%;
         padding: 0 20px;
+        overflow-y: auto;
+        overflow-x: hidden;
       }
       .drag-l,.drag-r{
         width: 255px;
