基础参数提交

--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -707,7 +707,7 @@ iframe {
   padding: 9px 0;
   height: 48px;
 }
-.el-table th.el-table__cell{
+.el-table th.is-leaf{
   color: @6C757D;
   background-color: @F1F3F7;
 }
