--- a/src/assets/admin/css/form.less
+++ b/src/assets/admin/css/form.less
@@ -197,6 +197,7 @@
           border: 1px solid @E4E6FC;
           width: 100%;
           li{
+            height: 36px;
             width: 100%;
             text-align: center;
             padding: 8px;
@@ -698,6 +699,45 @@
     }
   }
 }
+/**已选择的数据，可删除**/
+.box-list-warp{
+  border: 1px solid #E4E6FC;
+  border-radius: 3px;
+  max-width: 500px;
+  padding: 0 10px;
+  padding-right: 80px;
+  position: relative;
+  min-height: 40px;
+  span{
+    background: @F6F7FF;
+    border: 1px solid @C9D0FF;
+    border-radius: 2px;
+    line-height: 26px;
+    height: 26px;
+    padding: 0 10px;
+    color: @333;
+    display: inline-block;
+    position: relative;
+    padding-right: 20px;
+    margin-right: 10px;
+    i{
+      cursor: pointer;
+      position: absolute;
+      right: 8px;
+      top: 6px;
+      color: @6777EF;
+      &:hover{
+        opacity: .8;
+      }
+    }
+  }
+  .u-btn-r{
+    position: absolute;
+    right: 3px;
+    height: 32px;
+    top: 3px;
+  }
+}
 /**应用中心表单样式**/
 .mandate-form-w{
     .form-content{
@@ -726,6 +766,41 @@
       }
     }
   }
+  /**单独的上传文件按钮***/
+  .upfile-btn-img{
+    width: 95px;
+    height: 28px;
+    border-radius: 3px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 28px;
+    color: @B7BEC1;
+    padding-left: 20px;
+    text-align: center;
+    background:@F5F8F9 url(../img/icon-upload-min.png) left no-repeat;
+    background-position-x: 15px;
+    position: relative;
+    &::after{
+      position: absolute;
+      content: '';
+      display: block;
+      width: 99px;
+      height: 32px;
+      border: 1px dotted @ACACAC;
+      left: -3px;
+      top: -3px;
+      border-radius: 3px;
+    }
+    input{
+      position: absolute;
+      left: 0;
+      right: 0;
+      z-index: 9;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+    }
+  }
   /**日历控件-改为修改按钮**/
   .data-clear-icon{
     /deep/.el-input__inner{
@@ -739,6 +814,10 @@
     /deep/.el-input__suffix-inner{
       display: none;
     }
+  }
+  /***百度富文本*/
+  /deep/.edui-default .edui-box{
+    line-height: 20px !important;
   }
 
 
