--- a/src/assets/admin/css/table.less
+++ b/src/assets/admin/css/table.less
@@ -14,7 +14,7 @@
         background-color: @fff;
         margin-top: 4px;
         border-radius: 4px;
-        .m-title{
+        .admin-m-title{
             padding:0 20px;
             height: 64px;
             line-height: 64px;
