--- a/src/assets/admin/css/color.less
+++ b/src/assets/admin/css/color.less
@@ -10,11 +10,13 @@
 @F8F8F8:#F8F8F8;
 @F3F3F3:#F3F3F3;
 @D7DADB:#D7DADB;
+@EAEDF3:#EAEDF3;
 @6D6D6D:#6D6D6D;
 @78828A:#78828A;
 @6C757D:#6C757D;
 @222534:#222534;
 @C2C8C0:#C2C8C0;
+@3E54EE:#3E54EE;
 @6777EF:#6777EF;
 @6677EF:#6677EF;
 @6D7CEF:#6D7CEF;
@@ -29,6 +31,7 @@
 @8CC63F:#8CC63F;
 @912790:#912790;
 @34395E:#34395E;
+@3C4B5D:#3C4B5D;
 @404040:#404040;
 @313B3D:#313B3D;
 @BCBCBC:#BCBCBC;
@@ -44,6 +47,7 @@
 @F0F0F0:#F0F0F0;
 @8CC63F:#8CC63F;
 @F56C6C:#F56C6C;
+@FFB2B2:#FFB2B2;
 @F5F8F9:#F5F8F9;
 @B7BEC1:#B7BEC1;
 @ACACAC:#ACACAC;
@@ -51,3 +55,10 @@
 @E5E7E7:#E5E7E7;
 @707070:#707070;
 @FFECEC:#FFECEC;
+@FCA740:#FCA740;
+@F6F7FF:#F6F7FF;
+@F6FFE9:#F6FFE9;
+@C2DF9C:#C2DF9C;
+@F7F9FA:#F7F9FA;
+@FFEEE6:#FFEEE6;
+@EC4E1B:#EC4E1B;
