--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -15,7 +15,13 @@ body,
   font-size: 14px;
   font-family: "Avenir", Helvetica, Arial, sans-serif;
 }
-
+/*单行溢出隐藏**/
+.txt-one-hide{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: inline-block;
+}
 .admin-warp-page,
 .el-container {
   width: 100%;
