--- a/src/assets/web/css/color.less
+++ b/src/assets/web/css/color.less
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-
+.template0 {
+    filter:Gray;
+    filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);-webkit-filter: grayscale(100%);
+    filter: progid:DXImageTransform.Microsoft.MotionBlur(strength=13, direction=310) progid:DXImageTransform.Microsoft.Blur(pixelradius=2) progid:DXImageTransform.Microsoft.Wheel(duration=3);
+}
 .template1{
  .skin_template(#972C25,#be3c3c,#eb5f3c,#f93549);
 }
@@ -12,9 +16,6 @@
 .template4{
  .skin_template(#4b1d65,#382070,#7b32bf,#a205fd);
 }
-
-
-
 
 @fff:#fff;
 @fc:#fcfcfc;
