--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -18,7 +18,6 @@
     height: 100%;
     .drag-content{
       position: relative;
-      min-height: 600px;
       background-color: @F1F3F7;
       .drag-l,.drag-c,.drag-r{
         position: absolute;
@@ -29,7 +28,17 @@
       .drag-l-pad,.drag-r-pad{
         width: 100%;
         height: 100%;
+        min-height: 700px;
         padding: 0 20px;
+        overflow-y: auto;
+        &::-webkit-scrollbar {width:3px;height: 5px;}
+        &::-webkit-scrollbar-button {display: none;}
+        &::-webkit-scrollbar-track {background-color: #ddd;}
+        &::-webkit-scrollbar-track-piece {background: #f8f8f8;}//滚动条底部颜色
+        &::-webkit-scrollbar-thumb {background-color: #ddd;border-radius: 0px;}
+        &::-webkit-scrollbar-thumb:hover {background-color: #ddd;}
+        &::-webkit-scrollbar-corner {background-color: #ddd;}
+        &::-webkit-scrollbar-resizer {background-color: #ddd;}
       }
       .drag-l,.drag-r{
         width: 255px;
