--- a/static/assets/other/gridstack/update_class.css
+++ b/static/assets/other/gridstack/update_class.css
@@ -7,19 +7,23 @@
     right:0;
     top: 0;
     background: rgba(255, 255, 255, 0.5);
-    color: #000;
+    color: #999;
     display: block;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
+    width: 26px;
+    height: 26px;
+    line-height: 26px;
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
     border-radius: 50%;
     z-index: 99;
-    font-weight: bold;
+    font-weight: 400;
     font-style: inherit;
 }
+.jl_vip_zt_del::before {
+    content: "\2716";
+}
 .jl_vip_zt_warp .jl_vip_zt_del:hover{
+    color: #000;
     background-color: #fff;
 }
 .jl_vip_zt_warp .mask-layer{
