--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -17,6 +17,7 @@
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
     height: 100%;
     .drag-content{
+      min-height: 550px;
       position: relative;
       background-color: @F1F3F7;
       .drag-l,.drag-c,.drag-r{
