--- a/src/assets/web/css/color.less
+++ b/src/assets/web/css/color.less
@@ -11,7 +11,7 @@
     filter: progid:DXImageTransform.Microsoft.MotionBlur(strength=13, direction=310) progid:DXImageTransform.Microsoft.Blur(pixelradius=2) progid:DXImageTransform.Microsoft.Wheel(duration=3);
 }
 .template1{
- .skin_template(#972C25,#be3c3c,#eb5f3c,#f93549);
+ .skin_template(#972C25,#DF1A1A,#eb5f3c,#f93549);
 }
 .template2{
  .skin_template(#1d3c65,#204370,#3270bf,#0570fd);
@@ -56,7 +56,7 @@
 @border_r_shadow:5px 0 10px rgba(0,0,0,.05);//右边框投影
 
 //通用模板
-.skin_template(@main:#972C25,@child_color:#be3c3c,@child_color1:#eb5f3c,@check_color:#f93549,@child_color3:#eb5f3c,@child_color3:#eb5f3c){
+.skin_template(@main:#972C25,@child_color:#DF1A1A,@child_color1:#eb5f3c,@check_color:#f93549,@child_color3:#eb5f3c,@child_color3:#eb5f3c){
     .child_color_hover{
         &:hover{
             background-color: @child_color !important;
@@ -79,6 +79,13 @@
     .child_color_text_hover{
         &:hover{
            color: @child_color !important;
+        }
+    }
+    .child_color_bg_span_hover{
+        span{
+            &:hover{
+            background-color: @child_color !important;
+            }
         }
     }
     .next_hover:hover{
@@ -124,7 +131,7 @@
         color: @main;
     }
     .child_text_color{
-        color: @child_color;
+        color: @child_color !important;
     }
     .child1_text_color{
         color: @child_color1;
