--- a/src/assets/web/css/color.less
+++ b/src/assets/web/css/color.less
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/***暂无数据样式*/
 .jl_vip_zt_empty_data{
     color: #999;
     font-size: 12px;
@@ -56,7 +57,7 @@
 @border_r_shadow:5px 0 10px rgba(0,0,0,.05);//右边框投影
 
 //通用模板
-.skin_template(@main:#972C25,@child_color:#a21e1e,@child_color1:#eb5f3c,@check_color:#f93549,@child_color3:#eb5f3c,@child_color3:#DF1A1A){
+.skin_template(@main:#972C25,@child_color:#a21e1e,@child_color1:#eb5f3c,@check_color:#f93549,@child_color3:#eb5f3c,@child_color4:#DF1A1A){
     .child_color_hover{
         &:hover{
             background-color: @child_color !important;
@@ -141,8 +142,8 @@
             box-shadow: 0px 1px 5px  @child_color !important;
         }
     }
-    .child_color3_text_color{
-        color: @child_color3 !important;
+    .child_color4_text_color{
+        color: @child_color4 !important;
     }
 
 /**外包新增***/
