--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -244,7 +244,10 @@ iframe {
     padding: 0 15px;
 
     i {
-      font-size: 18px;
+      font-size: 14px;
+      display: inline-block;
+      width: 24px;
+      text-align: center;
     }
 
     span {
@@ -961,4 +964,7 @@ iframe {
       border-color: @fff;
     }
   }
+}
+.iconfont{
+  font-size:inherit;
 }
