--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -56,24 +56,24 @@ body,
   padding: 0;
 }
 
-.el-aside {
-  position: relative;
-  .header-warp{
-    width: 245px;
-  }
-  &::after {
-    content: "";
-    right: 8px;
-    top: 5px;
-    bottom: 0;
-    width: 8px;
-    z-index: 8;
-    position: absolute;
-    box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.03);
-  }
+// .el-aside {
+//   position: relative;
+//   .header-warp{
+//     width: 245px;
+//   }
+//   &::after {
+//     content: "";
+//     right: 8px;
+//     top: 5px;
+//     bottom: 0;
+//     width: 8px;
+//     z-index: 8;
+//     position: absolute;
+//     box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.03);
+//   }
 
-  z-index: 9;
-}
+//   z-index: 9;
+// }
 
 .fold-menu {
   &::after {
