--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -15,13 +15,7 @@ body,
   font-size: 14px;
   font-family: "Avenir", Helvetica, Arial, sans-serif;
 }
-/*单行溢出隐藏**/
-.txt-one-hide{
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  display: inline-block;
-}
+
 .admin-warp-page,
 .el-container {
   width: 100%;
@@ -55,7 +49,7 @@ body,
 .el-main {
   padding: 0;
 }
-
+// 左边菜单单独加了个阴影
 // .el-aside {
 //   position: relative;
 //   .header-warp{
@@ -143,7 +137,7 @@ iframe {
 }
 
 /**蓝色标题带图标**/
-.admin-m-title {
+.m-title {
   color: @6777EF;
   font-weight: bold;
   font-size: 16px;
@@ -244,10 +238,7 @@ iframe {
     padding: 0 15px;
 
     i {
-      font-size: 14px;
-      display: inline-block;
-      width: 24px;
-      text-align: center;
+      font-size: 18px;
     }
 
     span {
@@ -725,12 +716,14 @@ iframe {
     font-size: 18px;
     color: @34395E;
     padding: 0 20px;
+    font-weight: bold;
     border-bottom: 1px solid @EBEEF5;
 
     span {
       font-size: 14px;
       font-weight: 400;
       margin-left: 10px;
+      font-weight: normal;
     }
     .r-btn {
       float: right;
@@ -966,5 +959,5 @@ iframe {
   }
 }
 .iconfont{
-  font-size:inherit;
+  font-size: 14px;
 }
