--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -239,6 +239,7 @@ iframe {
 
     i {
       font-size: 18px;
+      width: 22px;
     }
 
     span {
@@ -959,5 +960,5 @@ iframe {
   }
 }
 .iconfont{
-  font-size: 14px;
+  font-size: inherit;
 }
