样式，和基础接口请求问题

--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -239,7 +239,8 @@ iframe {
 
     i {
       font-size: 18px;
-      width: 22px;
+      width: 28px;
+      text-align: center;
     }
 
     span {
@@ -961,4 +962,13 @@ iframe {
 }
 .iconfont{
   font-size: inherit;
+}
+.admin-m-title{
+  color: @6777EF;
+  font-size: 16px;
+  font-weight: bold;
+  i{
+    font-weight: normal;
+    margin-right: 10px;
+  }
 }
