头部底部修改接口

--- a/src/assets/admin/css/form.less
+++ b/src/assets/admin/css/form.less
@@ -453,6 +453,9 @@
             opacity: .8;
           }
         }
+        .edit-col-active{
+          background: #dbdfff;
+        }
         .edit-col-active::after{
           content: '';
           position: absolute;
