--- a/src/assets/admin/css/form.less
+++ b/src/assets/admin/css/form.less
@@ -543,6 +543,13 @@
   position: relative;
   img{
     width: 72px;
+    height: 72px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    background: #f1eeff;
+    border-radius: 14px;
+    margin-bottom: 8px;
     display: block;
     border-radius: 5px;
     position: absolute;
@@ -587,9 +594,6 @@
       width: 74px;
       height: 28px;
       padding: 6px 14px;
-      span{
-        line-height: 28px;
-      }
       i{
         font-size: 14px;
       }
