--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -122,7 +122,7 @@
           padding: 30px;
           .drag-content{
             width: 1200px;
-            height: 100% !important;
+            min-height: 100% !important;
             transform-origin: 0 0;
             margin-left: auto;
             margin-right: auto;
